--- a/EmployeeDirectory/EmployeeDirectory/Client/Pages/Index.razor
+++ b/EmployeeDirectory/EmployeeDirectory/Client/Pages/Index.razor
@@ -1,9 +1,5 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Directory of Employees</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Directory of Employees</h1>
