--- a/EmployeeDirectory/EmployeeDirectory/Client/_Imports.razor
+++ b/EmployeeDirectory/EmployeeDirectory/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using EmployeeDirectory.Client
 @using EmployeeDirectory.Client.Shared
+@using EmployeeDirectory.Shared;
