--- a/EmployeeDirectory/EmployeeDirectory/Client/Shared/NavMenu.razor
+++ b/EmployeeDirectory/EmployeeDirectory/Client/Shared/NavMenu.razor
@@ -14,6 +14,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Directory
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="newEmployee" Match="NavLinkMatch.All">
+                <span class="oi oi-plus" aria-hidden="true"></span> New Employee
+            </NavLink>
+        </div>
     </nav>
 </div>
 
