--- a/Demo/EmployeeDirectory/EmployeeDirectory/Client/Pages/Index.razor
+++ b/Demo/EmployeeDirectory/EmployeeDirectory/Client/Pages/Index.razor
@@ -19,7 +19,7 @@
 <br />
 
 <label class="form-label col-md-1">Filter</label>
-<input id="filterLastName" @bind="FilterText" @bind:event="oninput" class="form-control-sm col-md-2" />
+<input id="filterLastName" @bind="FilterText" @bind:event="oninput" @bind:after="LoadDataFromServer" class="form-control-sm col-md-2" />
 <button class="btn btn-primary" @onclick="LoadDataFromServer">Load From Server</button>
 
 <br />
